--- a/doc/report/sections/temp_bib.tex
+++ b/doc/report/sections/temp_bib.tex
@@ -1,6 +1,10 @@
 % temporary bib 
 \section{References}
 
-Meyn, S. P. and Tweedie, R. L. (2009). Markov Chains and Stochastic Stability, second edition. Cambridge: Cambridge University Press.
-\newline
+\hspace{10pt} Meyn, S. P. and Tweedie, R. L. (2009). Markov Chains and Stochastic Stability, second edition. Cambridge: Cambridge University Press.
+
 Peskun, P. (1973). Optimum Monte-Carlo Sampling Using Markov Chains. Biometrika, 60(3), 607-612. doi:10.2307/2335011
+
+Ben's notes: https://ben-br.github.io/stat-547c-fall-2019/assets/notes/lecture-notes.pdf
+
+Geyer's notes: http://www.stat.umn.edu/geyer/8112/notes/markov.pdf
