--- a/doc/report/sections/open-questions.tex
+++ b/doc/report/sections/open-questions.tex
@@ -23,7 +23,7 @@ S_0 = \{1.67, 2.3, 2.5\} := 123 \\
 S_1 = \{2.3, 2.3, 1.67\} := 221
 $
 
-Our state space will be then be the set of all possible permutations with repetitions of 1, 2, ..., n.
+Our state space will be then be the set of all possible permutations with repetitions of 1, 2, ..., n. This is example uses the way we may refer to as the \textbf{standard way} to represent our states.
 
 \item Kernel K: \\ 
 Our kernel K will also have some restrictions. The condition in \ref{kernel_section} b) will be extended to:  K(x,B) is a \textbf{probability} measure: K will always take non-negative values and be such that $K(x,E) = 1, \forall x \in E.$ This type of kernel is called a Markov or stochastic kernel.
@@ -45,7 +45,7 @@ For all x in E, for all s in $S - \{x\}$, define $K(x, \{s\}) = \dfrac{1}{n^n-1}
 
 As we mentioned, we can create more elaborate examples than one above while still avoiding self-sampling. To give more context, we may alternatively think, for n = 3, that we are rolling 3 RPG die with 3 faces each: 1, 2, 3, and recording the results. Our kernel K will be defined as follows:
 
-Let a state $j = j_1j_2j_3$ be accessible from a state $i = i_1i_2i_3$ if $j_k \neq i_k$ for k = 1, 2, 3 . Define the kernel $K(i, \{j\})$ as: uniformly pick an accessible state y from state x. The results is a chain that still avoids picking the same state consecutively, having a kernel that picks an accessible state with probability $2^{-3}$.
+Let a state $j = j_1j_2j_3$ be accessible from a state $i = i_1i_2i_3$ if $j_k \neq i_k$ for k = 1, 2, 3 . Define the kernel $K(i, \{j\})$ as: uniformly pick an accessible state y from state x. The result is a chain that still avoids picking the same state consecutively, having a kernel that picks an accessible state with probability $2^{-3}$.
 
 \begin{figure}
   \centering
@@ -57,11 +57,11 @@ Let a state $j = j_1j_2j_3$ be accessible from a state $i = i_1i_2i_3$ if $j_k \
 \subsection{Running the provided code}
 In the graph above, only the states 111, 123, 212, and 333 and all states that communicate with them are shown to avoid a crowded plot.
 
-In this project, we provide a \textbf{code} that simulates a Markov chain with the kernel we just defined. You can run the code by running the setup and then running from the source folder: \textbf{"python3 dependent\_bootstrap n"}, where n is the size of E (number of singletons in the sigma-algebra or number of "entries" in our standard notation if you prefer). Your samples will be saved in the \textbf{"deliverables"} folder, which will be created when you run it for the first time. The program will prevent you from running the code with $n < 3$.
+In this project, we provide a \textbf{code} that simulates a Markov chain with the kernel we just defined. You can run the code by running the setup and then running from the source folder: \textbf{``python3 dependent\_bootstrap n"}, where n is the size of E (number of singletons in the sigma-algebra or number of ``entries" in our standard notation if you prefer). Your samples will be saved in the \textbf{``deliverables"} folder, which will be created when you run it for the first time. The program will prevent you from running the code with $n < 3$.
 
 
 \subsection{Next steps}
-Our next steps will be checking that we obtain the desired invariant measures $\pi$ in concrete examples, such as the ones we just saw in the previous sections, and then finally we can compare the asymptotic variance associated to different kernels. If our predications are right, we expect to see lower asymptotic variance when we use kernels that do not allow self re-sampling compared to those that do or the traditional bootstrapping.
+Our next steps will be checking that we obtain the desired invariant measures $\pi$ in concrete examples, such as the ones we just saw in the previous sections, and then finally we can compare the asymptotic variance associated to different kernels. If our theory is correct, we expect to see lower asymptotic variance when we use kernels that do not allow self re-sampling compared to those that do or to the traditional bootstrapping method.
 
 
 
